--- a/StudentManagement/Views/ArithmeticOperation/Addition.cshtml
+++ b/StudentManagement/Views/ArithmeticOperation/Addition.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Addition";
 }
 <h2>Addition</h2>
-<form action="/Student/addition" method="get">
+<form action="/ArithmeticOperation/addition" method="get">
     <div>
         <label>X</label>
         <input type="text" name="x" value="@ViewBag.x" />
