--- a/StudentManagement/Views/Shared/_Layout.cshtml
+++ b/StudentManagement/Views/Shared/_Layout.cshtml
@@ -22,9 +22,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Accueil", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Groups", "Index", "Group")</li>
-                    <li>@Html.ActionLink("Etudiants", "Index", "Student")</li>
-                    <li>@Html.ActionLink("Recherche", "Search", "Student")</li>
+                    <li>@Html.ActionLink("Groups", "Index", "Groups")</li>
+                    <li>@Html.ActionLink("Etudiants", "Index", "Students")</li>
+                    <li>@Html.ActionLink("Recherche", "Search", "Students")</li>
                 </ul>
             </div>
         </div>
