--- a/StudentManagement/Views/Students_1/Create.cshtml
+++ b/StudentManagement/Views/Students_1/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Create";
+    Layout = "~/Views/Shared/_Layout_Solution1.cshtml";
 }
 
 <h2>Create</h2>
@@ -39,10 +40,10 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Teams, "Teams", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Teams, "Teams", 
+       htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.ListBox("Teams", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ListBoxFor(()=> { return new List<int>() { 1, 2, 3 }; }, @ViewBag.AllTeams)
             @Html.ValidationMessageFor(model => model.Teams, "", new { @class = "text-danger" })
         </div>
     </div>
