--- a/StudentManagement/Views/Students_1/Index.cshtml
+++ b/StudentManagement/Views/Students_1/Index.cshtml
@@ -24,12 +24,16 @@
             @Html.DisplayNameFor(model => model.Age)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Teams)
+            Nombre : @Html.DisplayNameFor(model => model.Teams) 
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Teams) 
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+    @foreach (var item in Model)
+    {
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Group.GroupId)
@@ -44,11 +48,15 @@
             @Html.DisplayFor(modelItem => item.Teams.Count)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.TeamsDescription)
+        </td>
+        
+        <td>
             @Html.ActionLink("Edit", "Edit", new { id = item.StudentId }) |
             @Html.ActionLink("Details", "Details", new { id = item.StudentId }) |
             @Html.ActionLink("Delete", "Delete", new { id = item.StudentId })
         </td>
     </tr>
-}
+    }
 
 </table>
