--- a/StudentManagement/Views/Groups/Delete.cshtml
+++ b/StudentManagement/Views/Groups/Delete.cshtml
@@ -19,6 +19,22 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Description2)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description2)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
