--- a/StudentManagement/Views/Students/Create.cshtml
+++ b/StudentManagement/Views/Students/Create.cshtml
@@ -42,7 +42,7 @@
         @Html.LabelFor(model => model.Teams, "Teams", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.ListBox("Teams", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ListBoxFor(()=> { return new List<int>() { 1, 2, 3 }; }, @ViewBag.AllTeams)
+            @*@Html.ListBoxFor(()=> { return new List<int>() { 1, 2, 3 }; }, @ViewBag.AllTeams)*@
             @Html.ValidationMessageFor(model => model.Teams, "", new { @class = "text-danger" })
         </div>
     </div>
