--- a/StudentManagement/Views/Students/Index.cshtml
+++ b/StudentManagement/Views/Students/Index.cshtml
@@ -7,10 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New Solution 2", "Create")
-</p>
-<p>
-    @Html.ActionLink("Create New Solution 1", "Create_1")
+    @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
